[gd_scene load_steps=11 format=3 uid="uid://1yd7cnuk8exk"]

[ext_resource type="FontFile" uid="uid://cmmi1q3juj7cv" path="res://assets/fonts/PixelOperator-Bold.ttf" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://cvk8xpiaq7fkx" path="res://scripts/settings.gd" id="1_f4mfi"]
[ext_resource type="Shader" uid="uid://duh2sr48inikd" path="res://scenes/blur.gdshader" id="1_r6d6q"]
[ext_resource type="Texture2D" uid="uid://ckx2pecapxbsg" path="res://assets/art/controller_playstation4.png" id="3_6wm04"]
[ext_resource type="Script" uid="uid://bh5o4amjsrx85" path="res://scripts/volume_slider.gd" id="4_83j8s"]
[ext_resource type="Texture2D" uid="uid://dgjmo7ke88ct0" path="res://assets/art/mouse.png" id="4_gis3k"]
[ext_resource type="Texture2D" uid="uid://1x2i3y38su6g" path="res://assets/art/keyboard.png" id="5_83j8s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6wm04"]
shader = ExtResource("1_r6d6q")
shader_parameter/samples = 25.0
shader_parameter/lod = 2
shader_parameter/tint_color = Color(0.592157, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36l1p"]
bg_color = Color(0.403922, 0.776471, 0.776471, 1)
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83j8s"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4mfi")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6wm04")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.0
offset_top = -88.0
offset_right = 504.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeControls" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/VolumeControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Volume"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VolumeControls"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Music" type="HBoxContainer" parent="VBoxContainer/VolumeControls"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/VolumeControls/Music"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="HSlider" type="HSlider" parent="VBoxContainer/VolumeControls/Music"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_36l1p")
max_value = 1.0
step = 0.001
script = ExtResource("4_83j8s")
bus_name = "Music"

[node name="SFX" type="HBoxContainer" parent="VBoxContainer/VolumeControls"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/VolumeControls/SFX"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "SFX"

[node name="HSlider" type="HSlider" parent="VBoxContainer/VolumeControls/SFX"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_36l1p")
max_value = 1.0
step = 0.001
script = ExtResource("4_83j8s")
bus_name = "SFX"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 60

[node name="Sensitivity" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Sensitivity"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Sensitivity"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="MouseSensitivity" type="HBoxContainer" parent="VBoxContainer/Sensitivity"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Sensitivity/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Mouse"

[node name="MouseSlider" type="HSlider" parent="VBoxContainer/Sensitivity/MouseSensitivity"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_36l1p")
min_value = 2.0
max_value = 5.0
step = 0.01
value = 2.0

[node name="RotationSensitivity" type="HBoxContainer" parent="VBoxContainer/Sensitivity"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Sensitivity/RotationSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Keyboard rotation"

[node name="RotationSlider" type="HSlider" parent="VBoxContainer/Sensitivity/RotationSensitivity"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_36l1p")
min_value = 2.0
max_value = 6.0
step = 0.01
value = 2.0

[node name="AccSensitivity" type="HBoxContainer" parent="VBoxContainer/Sensitivity"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Sensitivity/AccSensitivity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Keyboard acceleration"

[node name="AccSlider" type="HSlider" parent="VBoxContainer/Sensitivity/AccSensitivity"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_36l1p")
min_value = 600.0
max_value = 1000.0
step = 10.0
value = 600.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 60

[node name="Visuals" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Visuals"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Visuals"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Visuals"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_83j8s")
button_pressed = true
text = "CRT overlay"
flat = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 60

[node name="ControlScheme" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/ControlScheme"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 32
text = "Control Scheme"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ControlScheme"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/ControlScheme"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="MouseButton" type="TextureButton" parent="VBoxContainer/ControlScheme/Buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_gis3k")
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ControlScheme/Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 100

[node name="KeyboardButton" type="TextureButton" parent="VBoxContainer/ControlScheme/Buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_83j8s")
stretch_mode = 5

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/ControlScheme/Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 100

[node name="ControllerButton" type="TextureButton" parent="VBoxContainer/ControlScheme/Buttons"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_6wm04")
stretch_mode = 5

[connection signal="value_changed" from="VBoxContainer/Sensitivity/MouseSensitivity/MouseSlider" to="." method="_on_mouse_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sensitivity/RotationSensitivity/RotationSlider" to="." method="_on_rotation_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sensitivity/AccSensitivity/AccSlider" to="." method="_on_acc_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/Visuals/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/ControlScheme/Buttons/MouseButton" to="." method="_on_mouse_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ControlScheme/Buttons/KeyboardButton" to="." method="_on_keyboard_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ControlScheme/Buttons/ControllerButton" to="." method="_on_controller_button_toggled"]
